cmake_minimum_required(VERSION 3.10)
project(ood)

set(CMAKE_CXX_STANDARD 20)

add_executable(
        strategy-task-1 src/Strategy/task1/main.cpp
        src/Strategy/task1/DanceBehavior/DanceWaltz/DanceWaltz.cpp
        src/Strategy/task1/DanceBehavior/MinuetDance/MinuetDance.cpp
        src/Strategy/task1/DanceBehavior/NoDance/NoDance.cpp
        src/Strategy/task1/Ducks/Duck/Duck.cpp
        src/Strategy/task1/Ducks/DecoyDuck/DecoyDuck.cpp
        src/Strategy/task1/Ducks/MallardDuck/MallardDuck.cpp
        src/Strategy/task1/Ducks/ReadHeadDuck/ReadHeadDuck.cpp
        src/Strategy/task1/FlyBehavior/FlyWithWings/FlyWithWings.cpp
        src/Strategy/task1/FlyBehavior/NoFly/NoFly.cpp
)
add_executable(
        strategy-task-2 src/Strategy/task2/main.cpp
        src/Strategy/task2/DanceBehavior/DanceWaltz/DanceWaltz.cpp
        src/Strategy/task2/DanceBehavior/MinuetDance/MinuetDance.cpp
        src/Strategy/task2/DanceBehavior/NoDance/NoDance.cpp
        src/Strategy/task2/Ducks/Duck/Duck.cpp
        src/Strategy/task2/Ducks/DecoyDuck/DecoyDuck.cpp
        src/Strategy/task2/Ducks/MallardDuck/MallardDuck.cpp
        src/Strategy/task2/Ducks/ReadHeadDuck/ReadHeadDuck.cpp
        src/Strategy/task2/FlyBehavior/FlyWithWings/FlyWithWings.cpp
        src/Strategy/task2/FlyBehavior/NoFly/NoFly.cpp
)

add_executable(
        strategy-task-3 src/Strategy/task3/main.cpp
        src/Strategy/task3/Ducks/Duck/Duck.cpp
        src/Strategy/task3/Ducks/DecoyDuck/DecoyDuck.cpp
        src/Strategy/task3/Ducks/MallardDuck/MallardDuck.cpp
        src/Strategy/task3/Ducks/ReadHeadDuck/ReadHeadDuck.cpp
        src/Strategy/task3/DanceBehavior/DanceBehavior.cpp
        src/Strategy/task3/DanceBehavior/DanceBehavior.hpp
        src/Strategy/task3/FlyBehavior/FlyBehavior.cpp
        src/Strategy/task3/FlyBehavior/FlyBehavior.hpp
)
add_executable(observer
        src/Observer/main.cpp
        src/Observer/Observer/IObserver.hpp
        src/Observer/Observer/Observable.hpp
        src/Observer/Observer/CObserverable.cpp
        src/Observer/Observer/CObserverable.hpp
        src/Observer/Display/Display/Display.cpp
        src/Observer/Display/Display/Display.hpp
        src/Observer/WeatherData/WeatherData.cpp
        src/Observer/WeatherData/WeatherData.hpp
        src/Observer/Display/StatsDisplay/StatsDisplay.cpp
        src/Observer/Display/StatsDisplay/StatsDisplay.hpp
        src/Observer/Counter/AverageCounter.cpp
        src/Observer/Counter/AverageCounter.hpp
        src/Observer/Counter/AverageWindDirectionMeter.cpp
        src/Observer/Counter/AverageWindDirectionMeter.hpp
        src/Observer/Display/ExpensiveDisplay/ExpensiveDisplay.cpp
        src/Observer/Display/ExpensiveDisplay/ExpensiveDisplay.hpp
        src/Observer/MemoryIndex/MemoryIndex.hpp)

add_executable(observer_test
        src/Observer_test/main.cpp
        src/Observer_test/PriorityTest/Observable/MockObservable.cpp
        src/Observer_test/PriorityTest/Observer/MockObserver.cpp
        src/Observer_test/FewObservableTest/Observer/MockObserver.cpp
        src/Observer_test/FewObservableTest/Observer/MockObserver.hpp
        src/Observer/WeatherData/WeatherData.cpp
        src/Observer/WeatherData/WeatherData.hpp
        src/Observer_test/SafeObserversRemoving/Observer/MockObserver.cpp src/Observer_test/SafeObserversRemoving/Observer/MockObserver.hpp src/Observer_test/SafeObserversRemoving/Observable/MockObservable.cpp src/Observer_test/SafeObserversRemoving/Observable/MockObservable.hpp)

add_executable(decorator-beverage
        src/Decorator/Beverage/Beverage/IBeverage.hpp
        src/Decorator/Beverage/Beverage/Beverage.hpp
        src/Decorator/Beverage/Beverages/Coffee/Coffee.hpp
        src/Decorator/Beverage/Beverages/Cappuccino/Cappuccino.hpp
        src/Decorator/Beverage/Beverages/Latte/Latte.hpp
        src/Decorator/Beverage/Beverages/Tea/Tea.hpp
        src/Decorator/Beverage/Beverages/MilkShake/MilkShake.hpp
        src/Decorator/Beverage/Condiments/Condiments.hpp
        src/Decorator/Beverage/main.cpp
        src/Decorator/Beverage/Beverages/Latte/DoubleLatte.hpp
        src/Decorator/Beverage/Beverages/Cappuccino/DoubleCappuccino.hpp
        src/Decorator/Beverage/Beverages/Tea/CeylonTea.hpp
        src/Decorator/Beverage/Beverages/Tea/GreenTea.hpp
        src/Decorator/Beverage/Beverages/Tea/YellowTea.hpp
        src/Decorator/Beverage/Beverages/Tea/BergamotTea.hpp
        src/Decorator/Beverage/Beverages/MilkShake/SmallMilkShake.hpp
        src/Decorator/Beverage/Beverages/MilkShake/MediumMilkShake.hpp
        src/Decorator/Beverage/Beverages/MilkShake/BigMilkShake.hpp
        src/Decorator/Beverage/Condiments/Cream.hpp
        src/Decorator/Beverage/Condiments/Chocolate.hpp
        src/Utils/Strings.hpp
        src/Decorator/Beverage/Condiments/Liquor.hpp
        src/Decorator/Beverage/Condiments/ChocolateLiquor.hpp
        src/Decorator/Beverage/Condiments/WalnutLiquor.hpp)


add_executable(decorator-streams
        src/Common/Application/Input/ArgvInput/ArgvInput.cpp
        src/Common/Application/Input/ArgvInput/ArgvInput.hpp
        src/Common/Application/Output/StreamOutput/StreamOutput.cpp
        src/Common/Application/Output/StreamOutput/StreamOutput.hpp
        src/Common/Application/Output/StreamOutput/StreamOutput.cpp
        src/Common/Application/Output/StreamOutput/StreamOutput.hpp
        src/Common/Application/Input/AbstractInput/AbstractInput.cpp
        src/Common/Application/Input/AbstractInput/AbstractInput.hpp
        src/Common/Application/InputDefinition/IInputDefinition.hpp
        src/Common/Application/InputDefinition/InputDefinition.cpp
        src/Common/Application/InputDefinition/InputDefinition.hpp
        src/Common/Application/Application.cpp
        src/Common/Application/Input/InputArgument/InputArgument.cpp
        src/Common/Application/Input/InputOption/InputOption.cpp
        src/Common/Application/Input/AbstractInput/IOptionsEnumerator.hpp
        src/Decorator/Streams/main.cpp
        src/Decorator/Streams/Input/IInputDataStream.hpp
        src/Decorator/Streams/Output/IOutputDataStream.hpp
        src/Decorator/Streams/Output/MemoryOutputStream/MemoryOutputStream.cpp
        src/Decorator/Streams/Output/MemoryOutputStream/MemoryOutputStream.hpp
        src/Decorator/Streams/Input/MemoryInputStream/MemoryInputStream.cpp
        src/Decorator/Streams/Input/MemoryInputStream/MemoryInputStream.hpp
        src/Decorator/Streams/Application/TransformApplication.cpp
        src/Decorator/Streams/Application/TransformApplication.hpp
        src/Decorator/Streams/Output/EncryptOutputDecoratorStream/EncryptOutputDecoratorStream.cpp
        src/Decorator/Streams/Output/EncryptOutputDecoratorStream/EncryptOutputDecoratorStream.hpp
        src/Decorator/Streams/Output/CompressOutputDecoratorStream/CompressOutputDecoratorStream.cpp
        src/Decorator/Streams/Output/CompressOutputDecoratorStream/CompressOutputDecoratorStream.hpp
        src/Decorator/Streams/Input/DecompressInputStreamDecorator/DecompressInputStreamDecorator.cpp
        src/Decorator/Streams/Input/DecompressInputStreamDecorator/DecompressInputStreamDecorator.hpp
        src/Decorator/Streams/Input/DecryptInputStreamDecorator/DecryptInputStreamDecorator.cpp
        src/Decorator/Streams/Input/DecryptInputStreamDecorator/DecryptInputStreamDecorator.hpp
        src/Decorator/Streams/Crypt/Encoder.cpp
        src/Decorator/Streams/Crypt/Encoder.hpp
        src/Decorator/Streams/Compressor/Compressor.cpp
        src/Decorator/Streams/Compressor/Compressor.hpp
        src/Decorator/Streams/Crypt/IEncoder.hpp
        src/Decorator/Streams/Crypt/IDecoder.hpp
        src/Decorator/Streams/Factory/CryptStreamDecoratorFactory/CryptStreamDecoratorFactory.cpp
        src/Decorator/Streams/Factory/CryptStreamDecoratorFactory/CryptStreamDecoratorFactory.hpp
        src/Decorator/Streams/Factory/CryptStreamDecoratorFactory/ICryptStreamDecoratorFactory.hpp
        src/Decorator/Streams/Factory/StreamFactory/FileStreamFactory/FileStreamFactory.cpp
        src/Decorator/Streams/Factory/StreamFactory/FileStreamFactory/FileStreamFactory.hpp
        src/Decorator/Streams/Factory/StreamFactory/IStreamFactory.hpp
        src/Decorator/Streams/Factory/StreamFactory/MemoryStreamFactory/MemoryStreamFactory.cpp
        src/Decorator/Streams/Factory/StreamFactory/MemoryStreamFactory/MemoryStreamFactory.hpp
        src/Decorator/Streams/Factory/CompressStreamDecoratorFactory/ICompressStreamDecoratorFactory.hpp
        src/Decorator/Streams/Factory/CompressStreamDecoratorFactory/CompressStreamDecoratorFactory.cpp
        src/Decorator/Streams/Factory/CompressStreamDecoratorFactory/CompressStreamDecoratorFactory.hpp
        src/Decorator/Streams/Application/Input/InputDefinition/InputDefinition.cpp
        src/Decorator/Streams/Application/Input/InputDefinition/InputDefinition.hpp
        src/Utils/Strings.cpp
        src/Decorator/Streams/Input/FileInputStream/FileInputStream.cpp
        src/Decorator/Streams/Input/FileInputStream/FileInputStream.hpp
        src/Decorator/Streams/Output/FileOutputStream/FileOutputStream.cpp
        src/Decorator/Streams/Output/FileOutputStream/FileOutputStream.hpp)

add_executable(adapter src/Adapter/src/main.cpp src/Adapter/src/GraphicsLib/GraphicLib.hpp src/Adapter/src/ShapeDrawningLib/ShapeDrawningLib.hpp src/Adapter/src/ModernGraphicsLib/ModernGraphicsLib.hpp src/Adapter/src/App/App.hpp src/Adapter/src/GraphicLibAdapter/GraphicLibAdapter.hpp src/Adapter/src/GraphicLibAdapter/GraphicLibAdapterV2.hpp src/Command/src/Command/InsertImageCommand/InsertImageCommand.cpp src/Command/src/Command/InsertImageCommand/InsertImageCommand.hpp)

add_executable(adapter-tests src/Adapter/tests/main.cpp)

add_executable(state
        src/State/src/main.cpp
        src/State/src/NaiveGumBallMachine/GumBallMachine.hpp
        src/State/src/GumBallMachineWithState/State/IState.hpp
        src/State/src/GumBallMachineWithState/GumBallMachine/IGumBallMachine.hpp
        src/State/src/GumBallMachineWithState/State/SoldState/SoldState.cpp
        src/State/src/GumBallMachineWithState/State/SoldState/SoldState.hpp
        src/State/src/GumBallMachineWithState/State/SoldOutState/SoldOutState.cpp
        src/State/src/GumBallMachineWithState/State/SoldOutState/SoldOutState.hpp
        src/State/src/GumBallMachineWithState/State/HasQuarterState/HasQuarterState.cpp
        src/State/src/GumBallMachineWithState/State/HasQuarterState/HasQuarterState.hpp
        src/State/src/GumBallMachineWithState/State/NoQuarterState/NoQuarterState.cpp
        src/State/src/GumBallMachineWithState/State/NoQuarterState/NoQuarterState.hpp
        src/State/src/GumBallMachineWithState/GumBallMachine/GumBalMachineWithDynamicState/GumBalMachineWithDynamicState.cpp
        src/State/src/GumBallMachineWithState/GumBallMachine/GumBalMachineWithDynamicState/GumBalMachineWithDynamicState.hpp
        src/State/src/GumBallMachineWithState/GumBallMachine/GumBallMachineWithStaticState/GumBallMachineWithStaticState.cpp
        src/State/src/GumBallMachineWithState/GumBallMachine/GumBallMachineWithStaticState/GumBallMachineWithStaticState.hpp)

add_executable(state-test src/State/test/main.cpp
        src/State/test/MockGumBallMachine/MockGumBallMachine.cpp
        src/State/test/MockGumBallMachine/MockGumBallMachine.hpp
        src/State/src/GumBallMachineWithState/State/SoldState/SoldState.cpp
        src/State/src/GumBallMachineWithState/State/SoldState/SoldState.hpp
        src/State/src/GumBallMachineWithState/State/SoldOutState/SoldOutState.cpp
        src/State/src/GumBallMachineWithState/State/SoldOutState/SoldOutState.hpp
        src/State/src/GumBallMachineWithState/State/HasQuarterState/HasQuarterState.cpp
        src/State/src/GumBallMachineWithState/State/HasQuarterState/HasQuarterState.hpp
        src/State/src/GumBallMachineWithState/State/NoQuarterState/NoQuarterState.cpp
        src/State/src/GumBallMachineWithState/State/NoQuarterState/NoQuarterState.hpp
        src/State/test/StreamBufferOverrider/StreamBufferOverrider.cpp
        src/State/test/StreamBufferOverrider/StreamBufferOverrider.hpp
        src/State/src/GumBallMachineWithState/GumBallMachine/GumBallMachineWithStaticState/GumBallMachineWithStaticState.cpp
        src/State/src/GumBallMachineWithState/GumBallMachine/GumBallMachineWithStaticState/GumBallMachineWithStaticState.hpp
        src/State/src/GumBallMachineWithState/State/IState.hpp
        src/State/src/GumBallMachineWithState/GumBallMachine/IGumBallMachine.hpp
        src/State/src/GumBallMachineWithState/State/SoldState/SoldState.cpp
        src/State/src/GumBallMachineWithState/State/SoldState/SoldState.hpp
        src/State/src/GumBallMachineWithState/State/SoldOutState/SoldOutState.cpp
        src/State/src/GumBallMachineWithState/State/SoldOutState/SoldOutState.hpp
        src/State/src/GumBallMachineWithState/State/HasQuarterState/HasQuarterState.cpp
        src/State/src/GumBallMachineWithState/State/HasQuarterState/HasQuarterState.hpp
        src/State/src/GumBallMachineWithState/State/NoQuarterState/NoQuarterState.cpp
        src/State/src/GumBallMachineWithState/State/NoQuarterState/NoQuarterState.hpp
        )

add_executable(decorator-streams-tests
        src/Decorator/StreamsTests/main.cpp
        src/Decorator/Streams/Crypt/Encoder.hpp
        src/Decorator/Streams/Crypt/Encoder.cpp
        src/Decorator/Streams/Input/MemoryInputStream/MemoryInputStream.cpp
        src/Decorator/Streams/Input/MemoryInputStream/MemoryInputStream.hpp
        src/Decorator/Streams/Output/MemoryOutputStream/MemoryOutputStream.cpp
        src/Decorator/Streams/Output/MemoryOutputStream/MemoryOutputStream.hpp
        src/Decorator/Streams/Factory/CryptStreamDecoratorFactory/CryptStreamDecoratorFactory.cpp
        src/Decorator/Streams/Factory/CryptStreamDecoratorFactory/CryptStreamDecoratorFactory.hpp
        src/Decorator/Streams/Output/EncryptOutputDecoratorStream/EncryptOutputDecoratorStream.cpp
        src/Decorator/Streams/Output/EncryptOutputDecoratorStream/EncryptOutputDecoratorStream.hpp
        src/Decorator/Streams/Input/DecryptInputStreamDecorator/DecryptInputStreamDecorator.cpp
        src/Decorator/Streams/Input/DecryptInputStreamDecorator/DecryptInputStreamDecorator.hpp)

add_executable(command src/Command/src/main.cpp
        src/Command/src/Document/IDocument.hpp
        src/Command/src/Document/Elements/Paragraph/IParagraph.hpp
        src/Command/src/Document/Elements/Image/IImage.hpp
        src/Command/src/Document/Items/ConstDocumentItem/ConstDocumentItem.cpp
        src/Command/src/Document/Items/ConstDocumentItem/ConstDocumentItem.hpp
        src/Command/src/Document/Items/DocumentItem/DocumentItem.cpp
        src/Command/src/Document/Items/DocumentItem/DocumentItem.hpp
        src/Command/src/Command/ICommand.hpp
        src/Command/src/History/ICommandsHistory.hpp
        src/Common/Application
        src/Command/src/Command/SetTitleCommand/SetTitleCommand.cpp
        src/Command/src/Command/SetTitleCommand/SetTitleCommand.hpp
        src/Command/src/Controller/IController.hpp
        src/Command/src/Controller/AbstractController/AbstractController.cpp
        src/Command/src/Controller/AbstractController/AbstractController.hpp
        src/Command/src/Controller/SetTitleController/SetTitleController.cpp
        src/Command/src/Controller/SetTitleController/SetTitleController.hpp
        src/Command/src/Controller/ListController/ListController.cpp
        src/Command/src/Controller/ListController/ListController.hpp
        src/Command/src/Controller/InsertParagraphController/InsertParagraphController.cpp
        src/Command/src/Controller/InsertParagraphController/InsertParagraphController.hpp
        src/Command/src/Application/Application.cpp
        src/Command/src/Application/Application.hpp
        src/Command/src/ControllerRegistry/IControllerRegistry.hpp
        src/Command/src/ControllerRegistry/ControllerRegistry.cpp
        src/Command/src/ControllerRegistry/ControllerRegistry.hpp
        src/Common/Application/Input/ArgvInput/ArgvInput.cpp
        src/Common/Application/Input/ArgvInput/ArgvInput.hpp
        src/Common/Application/Output/StreamOutput/StreamOutput.cpp
        src/Common/Application/Output/StreamOutput/StreamOutput.hpp
        src/Common/Application/Output/StreamOutput/StreamOutput.cpp
        src/Common/Application/Output/StreamOutput/StreamOutput.hpp
        src/Common/Application/Input/AbstractInput/AbstractInput.cpp
        src/Common/Application/Input/AbstractInput/AbstractInput.hpp
        src/Common/Application/InputDefinition/IInputDefinition.hpp
        src/Common/Application/InputDefinition/InputDefinition.cpp
        src/Common/Application/InputDefinition/InputDefinition.hpp
        src/Common/Application/Application.cpp
        src/Common/Application/Input/InputArgument/InputArgument.cpp
        src/Common/Application/Input/InputOption/InputOption.cpp
        src/Common/Application/Input/AbstractInput/IOptionsEnumerator.hpp
        src/Utils/Strings.cpp
        src/Utils/Strings.hpp
        src/Command/src/History/CommandsHistory.cpp
        src/Command/src/History/CommandsHistory.hpp
        src/Command/src/Document/Document.cpp
        src/Command/src/Document/Document.hpp
        src/Command/src/Document/Elements/Paragraph/Paragraph.cpp
        src/Command/src/Document/Elements/Paragraph/Paragraph.hpp
        src/Command/src/Document/Elements/Image/Image.cpp
        src/Command/src/Document/Elements/Image/Image.hpp
        src/Command/src/Command/InsertParagraphCommand/InsertParagraphCommand.cpp
        src/Command/src/Command/InsertParagraphCommand/InsertParagraphCommand.hpp
        src/Command/src/ControllerRegistry/Exception/ItemNotFoundInRegistryException.hpp
        src/Common/Registry/Registry.hpp
        src/Command/src/Command/ReplaceTextCommand/ReplaceTextCommand.cpp
        src/Command/src/Command/ReplaceTextCommand/ReplaceTextCommand.hpp
        src/Command/src/Controller/ReplaceTextController/ReplaceTextController.cpp
        src/Command/src/Controller/ReplaceTextController/ReplaceTextController.hpp
        src/Command/src/Controller/UndoController/UndoController.cpp
        src/Command/src/Controller/UndoController/UndoController.hpp
        src/Command/src/Controller/RedoController/RedoController.cpp
        src/Command/src/Controller/RedoController/RedoController.hpp
        src/Command/src/Command/InsertImageCommand/InsertImageCommand.cpp
        src/Command/src/Command/InsertImageCommand/InsertImageCommand.hpp
        src/Command/src/Resource/FileResource.cpp
        src/Command/src/Resource/FileResource.hpp
        src/Command/src/Controller/InsertImageController/InsertImageController.cpp
        src/Command/src/Controller/InsertImageController/InsertImageController.hpp
        src/Command/src/Resource/FileResourceRepository/IFileResourceRepository.hpp
        src/Command/src/Resource/FileResourceRepository/FileResourceRepository.cpp
        src/Command/src/Resource/FileResourceRepository/FileResourceRepository.hpp
        src/Command/src/Command/ResizeImageCommand/ResizeImageCommand.cpp
        src/Command/src/Command/ResizeImageCommand/ResizeImageCommand.hpp
        src/Command/src/Controller/ResizeImageController/ResizeImageController.cpp
        src/Command/src/Controller/ResizeImageController/ResizeImageController.hpp
        src/Command/src/Document/DocumentConverter/IDocumentConverter.hpp
        src/Command/src/Document/DocumentConverter/HtmlDocumentConverter/HtmlDocumentConverter.cpp
        src/Command/src/Document/DocumentConverter/HtmlDocumentConverter/HtmlDocumentConverter.hpp
        src/Command/src/Controller/SaveDocumentController/SaveDocumentController.cpp
        src/Command/src/Controller/SaveDocumentController/SaveDocumentController.hpp
        src/Command/src/Controller/ControllerType.hpp
        src/Command/src/Controller/DeleteItemController/DeleteItemController.cpp
        src/Command/src/Controller/DeleteItemController/DeleteItemController.hpp
        src/Command/src/Command/DeleteItemCommand/DeleteItemCommand.cpp
        src/Command/src/Command/DeleteItemCommand/DeleteItemCommand.hpp
        src/Command/src/Controller/HelpController/HelpController.cpp
        src/Command/src/Controller/HelpController/HelpController.hpp
        src/Common/Registry/IEnumerator.hpp
        src/Command/src/ControllerCommandsHolder/IControllerCommandsHolder.hpp
        src/Command/src/ControllerCommandsHolder/ControllerCommandsHolder.cpp
        src/Command/src/ControllerCommandsHolder/ControllerCommandsHolder.hpp
        src/Command/src/ControllerRegistry/IControllerEnumerator.hpp
        src/Utils/Html.cpp
        src/Utils/Html.hpp
        src/Command/src/Document/AssetPathPreparer/IAssetPathPreparer.hpp
        src/Command/src/Document/AssetPathPreparer/RelativeAssetPathPreparer/RelativeAssetPathPreparer.cpp
        src/Command/src/Document/AssetPathPreparer/RelativeAssetPathPreparer/RelativeAssetPathPreparer.hpp
        src/Utils/FileSystem.cpp
        src/Utils/FileSystem.hpp)

add_executable(command-tests
        src/Command/tests/main.cpp
        src/Command/tests/CommandHistoryTests/Command/MockCommand.cpp
        src/Command/tests/CommandHistoryTests/Command/MockCommand.hpp
        src/Command/tests/CommandHistoryTests/Document/MockDocument.cpp
        src/Command/tests/CommandHistoryTests/Document/MockDocument.hpp
        src/Command/tests/DocumentTests/DocumentConverter/MockDocumentConverter.cpp
        src/Command/tests/DocumentTests/DocumentConverter/MockDocumentConverter.hpp
        src/Command/tests/DocumentTests/AssetPathPreparer/MockAssetPathPreparer.cpp
        src/Command/tests/DocumentTests/AssetPathPreparer/MockAssetPathPreparer.hpp
        src/Command/src/Document/IDocument.hpp
        src/Command/src/Document/Elements/Paragraph/IParagraph.hpp
        src/Command/src/Document/Elements/Image/IImage.hpp
        src/Command/src/Document/Items/ConstDocumentItem/ConstDocumentItem.cpp
        src/Command/src/Document/Items/ConstDocumentItem/ConstDocumentItem.hpp
        src/Command/src/Document/Items/DocumentItem/DocumentItem.cpp
        src/Command/src/Document/Items/DocumentItem/DocumentItem.hpp
        src/Command/src/Command/ICommand.hpp
        src/Command/src/History/ICommandsHistory.hpp
        src/Common/Application
        src/Command/src/Command/SetTitleCommand/SetTitleCommand.cpp
        src/Command/src/Command/SetTitleCommand/SetTitleCommand.hpp
        src/Command/src/Controller/IController.hpp
        src/Command/src/Controller/AbstractController/AbstractController.cpp
        src/Command/src/Controller/AbstractController/AbstractController.hpp
        src/Command/src/Controller/SetTitleController/SetTitleController.cpp
        src/Command/src/Controller/SetTitleController/SetTitleController.hpp
        src/Command/src/Controller/ListController/ListController.cpp
        src/Command/src/Controller/ListController/ListController.hpp
        src/Command/src/Controller/InsertParagraphController/InsertParagraphController.cpp
        src/Command/src/Controller/InsertParagraphController/InsertParagraphController.hpp
        src/Command/src/Application/Application.cpp
        src/Command/src/Application/Application.hpp
        src/Command/src/ControllerRegistry/IControllerRegistry.hpp
        src/Command/src/ControllerRegistry/ControllerRegistry.cpp
        src/Command/src/ControllerRegistry/ControllerRegistry.hpp
        src/Common/Application/Input/ArgvInput/ArgvInput.cpp
        src/Common/Application/Input/ArgvInput/ArgvInput.hpp
        src/Common/Application/Output/StreamOutput/StreamOutput.cpp
        src/Common/Application/Output/StreamOutput/StreamOutput.hpp
        src/Common/Application/Output/StreamOutput/StreamOutput.cpp
        src/Common/Application/Output/StreamOutput/StreamOutput.hpp
        src/Common/Application/Input/AbstractInput/AbstractInput.cpp
        src/Common/Application/Input/AbstractInput/AbstractInput.hpp
        src/Common/Application/InputDefinition/IInputDefinition.hpp
        src/Common/Application/InputDefinition/InputDefinition.cpp
        src/Common/Application/InputDefinition/InputDefinition.hpp
        src/Common/Application/Application.cpp
        src/Common/Application/Input/InputArgument/InputArgument.cpp
        src/Common/Application/Input/InputOption/InputOption.cpp
        src/Common/Application/Input/AbstractInput/IOptionsEnumerator.hpp
        src/Utils/Strings.cpp
        src/Utils/Strings.hpp
        src/Command/src/History/CommandsHistory.cpp
        src/Command/src/History/CommandsHistory.hpp
        src/Command/src/Document/Document.cpp
        src/Command/src/Document/Document.hpp
        src/Command/src/Document/Elements/Paragraph/Paragraph.cpp
        src/Command/src/Document/Elements/Paragraph/Paragraph.hpp
        src/Command/src/Document/Elements/Image/Image.cpp
        src/Command/src/Document/Elements/Image/Image.hpp
        src/Command/src/Command/InsertParagraphCommand/InsertParagraphCommand.cpp
        src/Command/src/Command/InsertParagraphCommand/InsertParagraphCommand.hpp
        src/Command/src/ControllerRegistry/Exception/ItemNotFoundInRegistryException.hpp
        src/Common/Registry/Registry.hpp
        src/Command/src/Command/ReplaceTextCommand/ReplaceTextCommand.cpp
        src/Command/src/Command/ReplaceTextCommand/ReplaceTextCommand.hpp
        src/Command/src/Controller/ReplaceTextController/ReplaceTextController.cpp
        src/Command/src/Controller/ReplaceTextController/ReplaceTextController.hpp
        src/Command/src/Controller/UndoController/UndoController.cpp
        src/Command/src/Controller/UndoController/UndoController.hpp
        src/Command/src/Controller/RedoController/RedoController.cpp
        src/Command/src/Controller/RedoController/RedoController.hpp
        src/Command/src/Command/InsertImageCommand/InsertImageCommand.cpp
        src/Command/src/Command/InsertImageCommand/InsertImageCommand.hpp
        src/Command/src/Resource/FileResource.cpp
        src/Command/src/Resource/FileResource.hpp
        src/Command/src/Controller/InsertImageController/InsertImageController.cpp
        src/Command/src/Controller/InsertImageController/InsertImageController.hpp
        src/Command/src/Resource/FileResourceRepository/IFileResourceRepository.hpp
        src/Command/src/Resource/FileResourceRepository/FileResourceRepository.cpp
        src/Command/src/Resource/FileResourceRepository/FileResourceRepository.hpp
        src/Command/src/Command/ResizeImageCommand/ResizeImageCommand.cpp
        src/Command/src/Command/ResizeImageCommand/ResizeImageCommand.hpp
        src/Command/src/Controller/ResizeImageController/ResizeImageController.cpp
        src/Command/src/Controller/ResizeImageController/ResizeImageController.hpp
        src/Command/src/Document/DocumentConverter/IDocumentConverter.hpp
        src/Command/src/Document/DocumentConverter/HtmlDocumentConverter/HtmlDocumentConverter.cpp
        src/Command/src/Document/DocumentConverter/HtmlDocumentConverter/HtmlDocumentConverter.hpp
        src/Command/src/Controller/SaveDocumentController/SaveDocumentController.cpp
        src/Command/src/Controller/SaveDocumentController/SaveDocumentController.hpp
        src/Command/src/Controller/ControllerType.hpp
        src/Command/src/Controller/DeleteItemController/DeleteItemController.cpp
        src/Command/src/Controller/DeleteItemController/DeleteItemController.hpp
        src/Command/src/Command/DeleteItemCommand/DeleteItemCommand.cpp
        src/Command/src/Command/DeleteItemCommand/DeleteItemCommand.hpp
        src/Command/src/Controller/HelpController/HelpController.cpp
        src/Command/src/Controller/HelpController/HelpController.hpp
        src/Common/Registry/IEnumerator.hpp
        src/Command/src/ControllerCommandsHolder/IControllerCommandsHolder.hpp
        src/Command/src/ControllerCommandsHolder/ControllerCommandsHolder.cpp
        src/Command/src/ControllerCommandsHolder/ControllerCommandsHolder.hpp
        src/Command/src/ControllerRegistry/IControllerEnumerator.hpp
        src/Utils/Html.cpp
        src/Utils/Html.hpp
        src/Command/src/Document/AssetPathPreparer/IAssetPathPreparer.hpp
        src/Command/src/Document/AssetPathPreparer/RelativeAssetPathPreparer/RelativeAssetPathPreparer.cpp
        src/Command/src/Document/AssetPathPreparer/RelativeAssetPathPreparer/RelativeAssetPathPreparer.hpp
        src/Utils/FileSystem.cpp
        src/Utils/FileSystem.hpp
        src/Command/tests/ApplicationTests/FileResourceRepository/MockFileResourceRepository.cpp src/Command/tests/ApplicationTests/FileResourceRepository/MockFileResourceRepository.hpp)

add_executable(factory src/Factory/src/main.cpp
        src/Factory/src/Factory/IShapeFactory.hpp
        src/Factory/src/Factory/ShapeFactory.cpp
        src/Factory/src/Factory/ShapeFactory.hpp
        src/Factory/src/Shape/Shape.cpp
        src/Factory/src/Shape/Shape.hpp
        src/Factory/src/Shape/Rectangle/Rectangle.cpp
        src/Factory/src/Shape/Rectangle/Rectangle.hpp
        src/Factory/src/Shape/Color.hpp
        src/Factory/src/Shape/Point.hpp
        src/Factory/src/Canvas/Canvas.cpp
        src/Factory/src/Canvas/Canvas.hpp
        src/Factory/src/Shape/Triangle/Triangle.cpp
        src/Factory/src/Shape/Triangle/Triangle.hpp
        src/Factory/src/Shape/Ellipse/Ellipse.cpp
        src/Factory/src/Shape/Ellipse/Ellipse.hpp
        src/Factory/src/Shape/RegularPolygon/RegularPolygon.cpp
        src/Factory/src/Shape/RegularPolygon/RegularPolygon.hpp
        src/Factory/src/Designer/IDesigner.hpp src/Factory/src/Designer/Designer.cpp
        src/Factory/src/Designer/Designer.hpp
        src/Factory/src/PictureDraft/PictureDraft.cpp
        src/Factory/src/PictureDraft/PictureDraft.hpp
        src/Factory/src/Painter/Painter.cpp src/Factory/src/Painter/Painter.hpp
        src/Utils/Strings.hpp
        src/Utils/Strings.cpp
    )

add_executable(composite
        src/Composite/src/Shape/Canvas.cpp
        src/Composite/src/Shape/Canvas.h
        src/Composite/src/Shape/CommonTypes.h
        src/Composite/src/Shape/Ellipse.cpp
        src/Composite/src/Shape/Ellipse.h
        src/Composite/src/Shape/FillStyle.cpp
        src/Composite/src/Shape/FillStyle.h
        src/Composite/src/Shape/GroupFillStyle.cpp
        src/Composite/src/Shape/GroupFillStyle.h
        src/Composite/src/Shape/GroupOutlineStyle.cpp
        src/Composite/src/Shape/GroupOutlineStyle.h
        src/Composite/src/Canvas/ICanvas.h
        src/Composite/src/Canvas/IDrawable.h
        src/Composite/src/Shape/IOutlineStyle.h
        src/Composite/src/Shape/IShapeGroup.h
        src/Composite/src/Shape/IShape.h
        src/Composite/src/Slide/ISlide.h
        src/Composite/src/Shape/IStyle.h
        src/Composite/src/main.cpp
        src/Composite/src/Shape/OutlineStyle.cpp
        src/Composite/src/Shape/OutlineStyle.h
        src/Composite/src/Shape/Rectangle.cpp
        src/Composite/src/Shape/Rectangle.h
        src/Composite/src/Shape
        src/Composite/src/Shape/ShapeGroup.cpp
        src/Composite/src/Shape/ShapeGroup.h
        src/Composite/src/Shape/SimpleShape.cpp
        src/Composite/src/Shape/SimpleShape.h
        src/Composite/src/Slide/Slide.cpp
        src/Composite/src/Slide/Slide.h
        src/Composite/src/Shape/Triangle.cpp
        src/Composite/src/Shape/Triangle.h
)

include_directories(src/Catch2)
include_directories(src/Utils)
include_directories(src/Common)
link_libraries(stdc++fs)

target_link_libraries(command stdc++fs)
target_link_libraries(command-tests stdc++fs)